Tales of the Arabian Nights 0.4 Prototype (see above)

Clones:
A.G. Soccer-Ball & Football R18u with 2.5L Sound (only the latter is new, 2.4 revision, inside the ROM it says 2.5L though)
Bad Cats LG-4
Bushido (alternate set B)
Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
Flintstones, The LA-5
Hook 4.6 English
Jurassic Park 3.07
Lucky Draw (alternate version - only difference is the #3 ROM)
Mach 2 (alternate set)
Monte Carlo (French Millions option, Free Play)
Monte Carlo (German Millions option, Free Play)
Monte Carlo (rev. 2 Millions option, Free Play)
No Fear 0.8X with SL-1 Sound
Theatre of Magic 1.2A
Waterworld (rev. 5) (which makes this the newest we have :))



Version 3.3 (December 24th, 2020) - "20 years already?"
------------------------------------------------------------------------------

Compiling for mac/iOS is now possible.
Also a new platform independent lib/dll is now available with a new, simple interface to request (some of) the internal data.
Fix -listxml for strings that contain embedded tags

pinPROC : updated library;  VS2019 build
YAML-cpp: updated to 0.6.3; VS2019 build

Updated LISY support to 5.26-41 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'HOme' Pinballs)

Added VGM file output support for AY8910, OKI6295, OKI6376, QSound, SAA1099, YM2151, YM2203, YMF262(OPL3), YM3526, YM3812, Y8950, and SN7648/9X (unsure about the mappings for these latter ones though!) sound chips
 Either use -vgmwrite on the commmand line (PinMAME)
 or select it in the game options (this requires a restart though, as VGM output requires to track everything)

PinMAME(32): Added an Automatic Sound Dump functionality:
 Started via 'F6' (instead of the Recording function via 'F5') and 
 skips automatically to the next sound / creates a new file (in the wave subdir) if there
 is no sound at all anymore (silence) or the length reaches 4mins.
 The dump stops automatically after soundcommand 0xFF (=max 256 overall generated sounds).