@@ -42,6 +42,7 @@ Bad Cats LG-4
 Bushido (alternate set B)
 Cheech & Chong: Road-Trip'pin (Harley-Davidson unofficial MOD)
 Flintstones, The LA-5
+Hardbody (rev. D) (the newest we have, only a few diagnostic lamp / switch names were corrected compared to rev. C)
 Hook 4.6 English
 Jurassic Park 3.07
 Lucky Draw (alternate version - only difference is the #3 ROM)
@@ -49,6 +50,7 @@ Mach 2 (alternate set)
 Monte Carlo (French Millions option, Free Play)
 Monte Carlo (German Millions option, Free Play)
 Monte Carlo (rev. 2 Millions option, Free Play)
+MotorDome (rev. B)
 No Fear 0.8X with SL-1 Sound
 Theatre of Magic 1.2A
 Waterworld (rev. 5) (which makes this the newest we have :))
